feat: complete CV section text content and layout

--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
     <section id="cv" class="section">
       <div class="cv-page">
         <div class="cv-main-header">
-          <h2>Resume</h2>
-          <a href="path/to/your/cv.pdf" download="Daniela_Guardia_CV.pdf" class="cv-download-button">
+          <h2>Daniela Guardia</h2>
+          <span></span>
+          <a href="#" download="Daniela_Guardia_CV.pdf" class="cv-download-button">
             <span>PDF</span>
             <svg>
               <use href="assets/icons/icons.svg#material-symbols--download"></use>
@@ -216,11 +217,12 @@
             <li>
               <div class="cv-item-header">
                 <span class="cv-title">Full Stack Javascript</span>
-                <span class="cv-date">(2024-2025)</span>
+                <span class="cv-date">(2024 - 2025)</span>
               </div>
               <div class="cv-institution">Academia Desafío Latam</div>
               <div class="cv-description">
-                Graduated from intensive program focused on modern web application development, covering frontend technologies like
+                Graduated from intensive bootcamp program focused on modern web application development, covering frontend
+                technologies like
                 HTML,
                 CSS, JavaScript, React, and backend with Node.js, Express, and databases like PostgreSQL.
               </div>
@@ -228,18 +230,24 @@
             <li>
               <div class="cv-item-header">
                 <span class="cv-title">CS50: Introduction to Computer Science</span>
-                <span class="cv-date">(2024)</span>
+                <span class="cv-date">(2023 - 2024)</span>
               </div>
               <div class="cv-institution">Harvard University (Online)</div>
-              <div class="cv-description">Learned the fundamentals of computer science, tackling algorithms, big O notation, lists, tries and hash tables through C, Python and basic HTML/CSS</div>
+              <div class="cv-description">Gained a solid foundation in core computer science principles, including
+                algorithms and data structures, applying them through hands-on projects in C, Python, and web
+                technologies. Developed strong problem-solving skills essential for building efficient web applications.
+              </div>
             </li>
             <li>
               <div class="cv-item-header">
-                 <span class="cv-title">Bachelor's Degree in English Language</span>
-                <span class="cv-date">(2015-2018)</span>
+                <span class="cv-title">Associate's Degree in English</span>
+                <span class="cv-date">(2015 - 2017)</span>
               </div>
               <div class="cv-institution">Pontifical Catholic University of Valparaíso</div>
-              <div class="cv-description"></div>
+              <div class="cv-description"> A comprehensive program focused on achieving advanced-level English language
+                skills. The curriculum focused on building proficiency in key areas such as reading
+                comprehension, active listening, written communication, and oral expression. The program aimed to
+                provide a strong understanding of English language structure and usage.</div>
             </li>
           </ul>
         </div>
@@ -249,29 +257,51 @@
           <ul>
             <li>
               <div class="cv-item-header">
-                <span class="cv-title">Freelance English-Spanish Translator</span>
-                <span class="cv-date">(2018 - Present)</span>
+                <span class="cv-title">English-Spanish Translator</span>
+                <span class="cv-date">(2018 - 2022)</span>
               </div>
-              <div class="cv-institution"></div>
-              <div class="cv-description"></div>
+              <div class="cv-institution">Freelance</div>
+              <div class="cv-description">
+                Operated as an independent freelance translator, managing multiple translation projects from start to finish. Learned to work
+                with translation assistance software,
+                developing the organizational skills necessary to deliver high-quality translation work on time.
+              </div>
             </li>
             <li>
               <div class="cv-item-header">
                 <span class="cv-title">Volunteer Translator</span>
-                <span class="cv-date">(2017-2019)</span>
+                <span class="cv-date">(2017 - 2018)</span>
               </div>
               <div class="cv-institution">Global Voices ES</div>
-              <div class="cv-description"></div>
+              <div class="cv-description">Contributed to an international community of volunteer writers, translators
+                and human rights activists dedicated to fostering understanding accross cultures and connecting people across borders.
+                Gained experience translating insightful articles and polished my translation skills working closely
+                with senior translators and editors. </div>
             </li>
           </ul>
         </div>
 
         <div class="cv-category">
-          <h3>Languages</h3>
-          <ul>
-            <li>Spanish: Native</li>
-            <li>English: Advanced (C1)</li>
-            <li>Japanese: Intermediate ()</li>
+          <h3>Language Proficiency</h3>
+          <ul class="cv-lang-list">
+            <li>
+              <svg>
+                <use href="assets/icons/icons.svg#emojione--flag-for-chile"></use>
+              </svg>
+              <span>Spanish: Native</span>
+            </li>
+            <li>
+              <svg>
+                <use href="assets/icons/icons.svg#emojione--flag-for-united-states"></use>
+              </svg>
+              <span>English: Fluent</span>
+            </li>
+            <li>
+              <svg>
+                <use href="assets/icons/icons.svg#emojione--flag-for-japan"></use>
+              </svg>
+              <span>Japanese: Intermediate</span>
+            </li>
           </ul>
         </div>
       </div>
