--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   <header id="hero" class="section">
 
     <div class="header-content">
+      <p id="header-pre">&#x1F44B; Hey! I'm</p>
       <p id="header-nombre">Daniela Guardia</p>
-      <h1>Full Stack Developer</h1>
-      <p id="header-body">I build modern web applications with a focus on accessibility, responsivity and efficiency.
-      </p>
+      <h1>Full Stack Developer.</h1>
+      <p id="header-body">I'm passionate about building accessible, modern web applications that connect everyone &#x2728;</p>
 
     </div>
 
@@ -221,7 +221,8 @@
               </div>
               <div class="cv-institution">Academia Desafío Latam</div>
               <div class="cv-description">
-                Graduated from intensive bootcamp program focused on modern web application development, covering frontend
+                Graduated from intensive bootcamp program focused on modern web application development, covering
+                frontend
                 technologies like
                 HTML,
                 CSS, JavaScript, React, and backend with Node.js, Express, and databases like PostgreSQL.
@@ -262,7 +263,8 @@
               </div>
               <div class="cv-institution">Freelance</div>
               <div class="cv-description">
-                Operated as an independent freelance translator, managing multiple translation projects from start to finish. Learned to work
+                Operated as an independent freelance translator, managing multiple translation projects from start to
+                finish. Learned to work
                 with translation assistance software,
                 developing the organizational skills necessary to deliver high-quality translation work on time.
               </div>
@@ -274,7 +276,8 @@
               </div>
               <div class="cv-institution">Global Voices ES</div>
               <div class="cv-description">Contributed to an international community of volunteer writers, translators
-                and human rights activists dedicated to fostering understanding accross cultures and connecting people across borders.
+                and human rights activists dedicated to fostering understanding accross cultures and connecting people
+                across borders.
                 Gained experience translating insightful articles and polished my translation skills working closely
                 with senior translators and editors. </div>
             </li>
@@ -310,9 +313,7 @@
 
     <section id="about" class="section">
       <h2>About</h2>
-      <div>
-        <p>Me</p>
-      </div>
+      <div class="about-body">
     </section>
   </main>
 
