feat: add icon links to hero section, separate nav links into 2 gropus

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 </head>
 
 <body>
-  <nav id="navbar" data-bs-theme="dark">
+  <nav id="navbar"">
+    <div class=" nav-container">
     <div class="nav-navigation">
-      <a href="#hero" class="navbar-item">HOME</a>
-      <a href="#portfolio" class="navbar-item">PORTFOLIO</a>
-      <a href="#skills" class="navbar-item">SKILLS</a>
-      <a href="#cv" class="navbar-item">CV</a>
-      <a href="#about" class="navbar-item">ABOUT</a>
+      <a href="#hero" class="navbar-item navbar-brand">Daniela Guardia</a>
     </div>
-    <div class="nav-right">
+    <div class="nav-navigation">
+      <a href="#portfolio" class="navbar-item">Portfolio</a>
+      <a href="#skills" class="navbar-item">Skills</a>
+      <a href="#cv" class="navbar-item">CV</a>
+      <a href="#personal" class="navbar-item">Personal</a>
+    </div>
     </div>
   </nav>
 
@@ -32,9 +34,20 @@
 
     <div class="header-content">
       <p id="header-pre">&#x1F44B; Hey! I'm</p>
-      <p id="header-nombre">Daniela Guardia</p>
+      <p id="header-nombre">Daniela Guardia <a href="https://github.com/DaniJGP/" target="_blank" aria-label="Github profile">
+          <svg>
+            <use href="assets/icons/icons.svg#skill-icons--github-dark"> </use>
+          </svg>
+        </a>
+        <a href="https://www.linkedin.com/in/daniela-guardia-3425bb317/" target="_blank">
+          <svg>
+            <use href="assets/icons/icons.svg#skill-icons--linkedin"></use>
+          </svg>
+        </a>
+      </p>
       <h1>Full Stack Developer.</h1>
-      <p id="header-body">I'm passionate about building accessible, modern web applications that connect everyone &#x2728;</p>
+      <p id="header-body">I'm passionate about building accessible, modern web applications that connect everyone
+        &#x2728;</p>
 
     </div>
 
@@ -311,9 +324,10 @@
     </section>
 
 
-    <section id="about" class="section">
+    <section id="personal" class="section">
       <h2>About</h2>
-      <div class="about-body">
+      <div class="personal-body">
+      </div>
     </section>
   </main>
 
