feat: add semantic tags, links and aria labels to hero section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Daniela Guardia</title>
+  <title>Daniela Guardia: Full Stack Developer</title>
 </head>
 
 <body>
@@ -33,21 +33,28 @@
   <header id="hero" class="section">
 
     <div class="header-content">
-      <p id="header-pre">&#x1F44B; Hey! I'm</p>
-      <p id="header-nombre">Daniela Guardia <a href="https://github.com/DaniJGP/" target="_blank" aria-label="Github profile">
+      <h1>
+        <span id="header-pre">&#x1F44B; Hey! I'm</span>
+        <span id="header-nombre">Daniela Guardia</span>
+        <span id="header-title">Full Stack Developer</span>
+      </h1>
+      <p id="header-body">
+        I'm passionate about building accessible, modern web applications that connect everyone &#x2728;</p>
+      <p id="header-links">
+        <a href="https://github.com/DaniJGP/" target="_blank" aria-label="Github profile">
           <svg>
-            <use href="assets/icons/icons.svg#skill-icons--github-dark"> </use>
+            <use href="assets/icons/icons.svg#skill-icons--github-dark"></use>
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/daniela-guardia-3425bb317/" target="_blank">
+        <a href="https://codepen.io/DaniJGP" target="_blank" aria-label="Codepen showcase"><svg>
+            <use href="assets/icons/icons.svg#skill-icons--codepen-dark"></use>
+          </svg></a>
+        <a href="https://www.linkedin.com/in/daniela-guardia-3425bb317/" target="_blank" aria-label="Linkedin profile">
           <svg>
             <use href="assets/icons/icons.svg#skill-icons--linkedin"></use>
           </svg>
         </a>
       </p>
-      <h1>Full Stack Developer.</h1>
-      <p id="header-body">I'm passionate about building accessible, modern web applications that connect everyone
-        &#x2728;</p>
 
     </div>
 
