feat: add text content and corresponding style to about me section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="#portfolio" class="navbar-item">Portfolio</a>
       <a href="#skills" class="navbar-item">Skills</a>
       <a href="#cv" class="navbar-item">CV</a>
-      <a href="#personal" class="navbar-item">Personal</a>
+      <a href="#aboutme" class="navbar-item">About</a>
     </div>
     </div>
   </nav>
@@ -331,9 +331,18 @@
     </section>
 
 
-    <section id="personal" class="section">
-      <h2>About</h2>
-      <div class="personal-body">
+    <section id="aboutme" class="section">
+      <h2>About me</h2>
+      <div class="aboutme-body">
+        <p>Welcome! I'm Daniela, a full-stack web developer specialized in Javascript and Python who's always eager to
+          learn new technologies and expand my skillset.</p>
+        <p>I'm an optimist at heart, still holding onto the idealism of the early internet, exploring ways to build
+          applications that are not only technically sound, but also accessible to everyone, everywhere. My goal is to
+          contribute to creating a more inclusive digital space that breaks down barriers and brings people closer
+          together.</p>
+        <p>Beyond the world of code, I'm a self-taught language learner and heavy-metal guitarist; I'm working on
+          intermediate-level Japanese material, with the current goal of tackling the advanced JLPT N2 test this
+          December! I'm also a lover of strategy games and Formula 1 fanatic.</p>
       </div>
     </section>
   </main>
