feat: add grid layout, flex project cards with uptaded text content

--- a/index.html
+++ b/index.html
@@ -64,43 +64,31 @@
     <section id="portfolio" class="section">
       <h2>My projects</h2>
       <div class="project-grid">
-        <div class="project-card">
-          <img src="assets/img/iguana-desktop.jpg" alt="Iguana">
-          <div>
-            <h3>Iguana</h3>
-            <p>Landing page estilizada utilizando CSS la propiedad flexbox para alinear el contenido
-              de manera responsiva. También se emplean íconos de FontAwesome.</p>
+
+        <article class="project-card">
+          <div class="project-image-container"><img src="assets/img/portfolio-d1.jpg" alt="Portfolio"></div>
+          <div class="project-content">
+            <h3>Portfolio</h3>
+            <p>This very website! I set out to make it my personal playground, using only HTML/CSS/vanilla JS, learning
+              lots about
+              accessibility, SVG sprites (which I use for all the logos), animations and much more!</p>
             <a href="https://danijgp.github.io/adl-iguana/" target="_blank">Ver</a>
+            <footer class="project-links">
+
+            </footer>
           </div>
-        </div>
-        <div class="project-card">
-          <img src="assets/img/arriendo-tablet.jpg" alt="Arriendo" class="project-img">
-          <div>
-            <h3>Arriendo</h3>
-            <p>Página de arriendo de propiedades que utiliza la barra de navegación, el sistema de
-              filas y columnas, y los temas de color por defecto del framework Bootstrap.</p>
-            <a href="https://danijgp.github.io/arriendo/" target="_blank">Ver</a>
+        </article>
+
+        <article class="project-card">
+
+          <div class="project-image-container"><img src="assets/img/galeria-d1.jpg" alt="Galería Arte"></div>
+          <div class="project-content">
+            <h3>Galería Arte</h3>
+            <p>My bootcamp final project! Built with React and Node.js, it includes all of the essential capabilites of
+              an art eCommerce, with user creation, login, cart funcionality, orders, etc.</p>
+            <a href="#" target="_blank">Ver</a>
           </div>
-        </div>
-        <div class="project-card">
-          <img src="assets/img/cuppon-desktop.jpg" alt="Cuppon">
-          <div>
-            <h3>Cuppon</h3>
-            <p>Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de
-              Bootstrap para utilizar un tema de colores personalizado</p>
-            <a href="https://danijgp.github.io/adl-cuppon/" target="_blank">Ver</a>
-          </div>
-        </div>
-        <div class="project-card">
-          <img src="assets/img/cuppon-desktop.jpg" alt="Cuppon">
-          <div>
-            <h3>Cuppon</h3>
-            <p>Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de
-              Bootstrap para utilizar un tema de colores personalizado</p>
-            <a href="https://danijgp.github.io/adl-cuppon/" target="_blank">Ver</a>
-          </div>
-        </div>
-      </div>
+        </article>
     </section>
 
     <section id="skills" class="section">
