--- a/index.html
+++ b/index.html
@@ -68,27 +68,75 @@
         <article class="project-card">
           <div class="project-image-container"><img src="assets/img/portfolio-d1.jpg" alt="Portfolio"></div>
           <div class="project-content">
-            <h3>Portfolio</h3>
-            <p>This very website! I set out to make it my personal playground, using only HTML/CSS/vanilla JS, learning
-              lots about
-              accessibility, SVG sprites (which I use for all the logos), animations and much more!</p>
-            <a href="https://danijgp.github.io/adl-iguana/" target="_blank">Ver</a>
-            <footer class="project-links">
-
-            </footer>
+            <h3 class="project-title">Portfolio Website</h3>
+            <div class="project-desc">
+              <p>My personal playground, and the very website you're on! Built from the ground up using only HTML, CSS and
+                vanilla JavaScript, it has taught me robust accessibility features, SVG sprites
+              for scalable icon use, subtle CSS animations.</p>
+              </p>
           </div>
-        </article>
-
-        <article class="project-card">
-
-          <div class="project-image-container"><img src="assets/img/galeria-d1.jpg" alt="Galería Arte"></div>
-          <div class="project-content">
-            <h3>Galería Arte</h3>
-            <p>My bootcamp final project! Built with React and Node.js, it includes all of the essential capabilites of
-              an art eCommerce, with user creation, login, cart funcionality, orders, etc.</p>
-            <a href="#" target="_blank">Ver</a>
+          <div class="project-skills">
+            <span class="skill-tag">HTML</span>
+            <span class="skill-tag">CSS</span>
+            <span class="skill-tag">JavaScript</span>
+            <span class="skill-tag">Accessibility</span>
+            <span class="skill-tag">SVG</span>
           </div>
-        </article>
+          <footer class="project-links">
+            <a href="#" target="_blank" rel="noopener"
+              class="project-link-button">
+              <svg class="project-link-icon">
+                <use href="assets/icons/icons.svg#ic--outline-play-circle" role="img"></use>
+              </svg>
+              <span>DEMO</span>
+            </a>
+            <a href="https://github.com/DaniJGP/portfolio" target="_blank" rel="noopener" class="project-link-button">
+              <svg class="project-link-icon">
+                <use href="assets/icons/icons.svg#mdi--github" role="img"></use>
+              </svg>
+              <span>GITHUB</span></a>
+          </footer>
+      </div>
+      </article>
+
+      <article class="project-card">
+
+        <div class="project-image-container"><img src="assets/img/galeria-d1.jpg" alt="Galería Arte"></div>
+        <div class="project-content">
+          <h3 class="project-title">Galería Arte</h3>
+          <div class="project-desc">
+            <p>A full-stack art gallery e-commerce web application. It features secure user
+              registration, JWT-secured log-in sessions, shopping cart, buy order processing. It also includes an admin
+              panel functionality for the management of inventory, user accounts and incoming orders.</p>
+            <p>Built in collaboration with <a href="https://joacozun.github.io/" target="_blank"
+                rel="noopener noreferrer">@joacozun</a>.</p>
+          </div>
+          <div class="project-skills">
+            <span class="skill-tag">React</span>
+            <span class="skill-tag">Node.js</span>
+            <span class="skill-tag">Express.js</span>
+            <span class="skill-tag">PostgreSQL</span>
+            <span class="skill-tag">Full-Stack Development</span>
+            <span class="skill-tag">JWT Authentication</span>
+          </div>
+          <footer class="project-links">
+            <a href="https://galeria-arte-82xx.onrender.com/" target="_blank" rel="noopener"
+              class="project-link-button">
+              <svg class="project-link-icon">
+                <use href="assets/icons/icons.svg#ic--outline-play-circle" role="img"></use>
+              </svg>
+              <span>DEMO</span>
+            </a>
+            <a href="https://github.com/DaniJGP/galeria-arte" target="_blank" rel="noopener"
+              class="project-link-button"> <svg class="project-link-icon">
+                <use href="assets/icons/icons.svg#mdi--github" role="img"></use>
+              </svg>
+              <span>GITHUB</span></a>
+          </footer>
+        </div>
+      </article>
+
+
     </section>
 
     <section id="skills" class="section">
