--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   <main>
     <section id="portfolio" class="section">
       <h2 class="animate slide-from-left delay-s">My projects</h2>
-      <div class="project-grid animate slide-from-left delay-m">
-        <article class="project-card">
+      <div class="project-grid">
+        <article class="project-card animate slide-from-left delay-s">
           <div class="project-image-container"><img src="assets/img/portfolio-d1.jpg" alt="Portfolio"></div>
           <div class="project-content">
             <h3 class="project-title">Portfolio Website</h3>
@@ -99,7 +99,7 @@
           </div>
         </article>
 
-        <article class="project-card">
+        <article class="project-card animate slide-from-left delay-m">
 
           <div class="project-image-container"><img src="assets/img/galeria-d1.jpg" alt="Galería Arte"></div>
           <div class="project-content">
@@ -208,8 +208,8 @@
           </div>
         </div>
         <div id="languages-section" class="skill-section">
-          <h3 class="animate slide-left delay-s">Languages</h3>
-          <div class="skill-card-container animate slide-left delay-m">
+          <h3 class="animate slide-from-right delay-s">Languages</h3>
+          <div class="skill-card-container animate slide-from-right delay-m">
             <div class="skill-card">
               <svg>
                 <use href="assets/icons/icons.svg#icon-javascript"></use>
@@ -231,8 +231,8 @@
           </div>
         </div>
         <div id="other-section" class="skill-section">
-          <h3 class="animate slide-left delay-s">Technologies</h3>
-          <div class="skill-card-container animate slide-left delay-m">
+          <h3 class="animate slide-from-right delay-s">Technologies</h3>
+          <div class="skill-card-container animate slide-from-right delay-m">
             <div class="skill-card">
               <svg>
                 <use href="assets/icons/icons.svg#icon-git"></use>
