--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
 <body>
   <nav id="navbar">
     <div class="nav-container">
-      <div class="nav-navigation">
+      <div class="nav-home">
         <a href="#hero" class="navbar-item navbar-brand">Daniela Guardia</a>
+        <button type="button" class="nav-toggle" aria-expanded="false" aria-controls="nav-navigation" id="navToggler">
+          <svg>
+            <use href="assets/icons/icons.svg#ic--baseline-menu"></use>
+          </svg>
+        </button>
       </div>
-      <div class="nav-navigation">
+      <div class="nav-navigation" id="navNavigation">
         <a href="#portfolio" class="navbar-item">Portfolio</a>
         <a href="#skills" class="navbar-item">Skills</a>
         <a href="#cv" class="navbar-item">CV</a>
