feat: add scroll to portfolio with bounce animation

--- a/index.html
+++ b/index.html
@@ -64,8 +64,13 @@
           </svg>
         </a>
       </p>
-
     </div>
+    <a href="#portfolio" class="scroll-button animate fade-bounce">
+      <p class="animate slide-from-bottom delay-xl">Scroll to projects!</p>
+      <svg aria-hidden="true" class="scroll-arrow">
+        <use href="assets/icons/icons.svg#material-symbols--arrow-downward-rounded"></use>
+      </svg>
+    </a>
 
   </header>
 
