fix: reword about me paragraph

--- a/index.html
+++ b/index.html
@@ -392,10 +392,12 @@
           broadly accessible. My goal is to contribute to creating a more inclusive digital space that breaks down
           barriers and brings people closer together, either as a solo developer or working in a team that shares these
           beliefs.</p>
-        <p>I'm currently learning the ins and outs of CSS animations, accessibility and the use of SVG sprite for icons; you'll
+        <p>I'm currently learning the ins and outs of CSS animations, accessibility and the use of SVG sprites for
+          icons; you'll
           be able to read more about this in my blog, coming soon!</p>
-        <p>When not coding, you'd probably find me immersing myself in Japanese material to prepare for the JLPT or playing electric guitar,
-          bedroom-musician style. I'm also a lover of strategy games and and avid Formula 1 fanatic.
+        <p>When not coding, you'd probably find me immersing myself in Japanese material to prepare for the JLPT or
+          learning and playing riffs on my electric guitar. I'm also a lover of strategy games and and avid Formula 1
+          fanatic.
         </p>
       </div>
     </section>
