fix: add missing classes to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/animations.css">
   <title>Daniela Guardia: Full Stack Developer</title>
 </head>
 
@@ -41,25 +42,25 @@
   <header id="hero" class="section">
 
     <div class="header-content">
-      <h1>
-        <span id="header-pre" class="animate slide-from-left">&#x1F44B; Hey! I'm</span>
-        <span id="header-nombre" class="animate slide-from-left delay-s">Daniela Guardia</span>
-        <span id="header-title" class="animate slide-from-left delay-m">Full Stack Developer</span>
+      <h1 class="hero-heading-group">
+        <span class="header-pre animate slide-from-left">&#x1F44B; Hey! I'm</span>
+        <span class="header-name animate slide-from-left delay-s">Daniela Guardia</span>
+        <span class="header-title animate slide-from-left delay-m">Full Stack Developer</span>
       </h1>
-      <p class="animate slide-from-left delay-l header-desc">
+      <p class="header-desc animate slide-from-left delay-l header-desc">
         I'm passionate about building accessible, modern web applications that connect everyone &#x2728;</p>
       <p class="header-links">
         <a href="https://github.com/DaniJGP/" target="_blank" aria-label="Github profile">
-          <svg class="animate rotate-icon delay-s">
+          <svg class="hero-svg animate rotate-icon delay-s">
             <use href="assets/icons/icons.svg#skill-icons--github-dark"></use>
           </svg>
         </a>
         <a href="https://codepen.io/DaniJGP" target="_blank" aria-label="Codepen showcase">
-          <svg class="animate rotate-icon delay-m">
+          <svg class="hero-svg animate rotate-icon delay-m">
             <use href="assets/icons/icons.svg#skill-icons--codepen-dark"></use>
           </svg></a>
         <a href="https://www.linkedin.com/in/daniela-guardia-3425bb317/" target="_blank" aria-label="Linkedin profile">
-          <svg class="animate rotate-icon delay-l">
+          <svg class="hero-svg animate rotate-icon delay-l">
             <use href="assets/icons/icons.svg#skill-icons--linkedin"></use>
           </svg>
         </a>
