feat: add svg icon for dark/light theme toggle in navbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/animations.css">
+  <link rel="stylesheet" href="assets/css/animations.css">
   <title>Daniela Guardia: Full Stack Developer</title>
 </head>
 
@@ -35,6 +35,13 @@
           <a href="#cv" class="navbar-item">CV</a>
           <a href="#aboutme" class="navbar-item">About</a>
         </div>
+      </div>
+      <div class="nav-utils">
+        <button class="navbar-darkmode-toggle">
+          <svg>
+            <use href="assets/icons/icons.svg#mdi--white-balance-sunny"> </use>
+          </svg>
+        </button>
       </div>
     </div>
   </nav>
