--- a/index.html
+++ b/index.html
@@ -21,12 +21,6 @@
     <div class="nav-container">
       <div class="nav-home">
         <a href="#hero" class="navbar-item navbar-brand">Daniela Guardia</a>
-        <button type="button" class="nav-toggle" aria-expanded="false" aria-label="Toggle navigation"
-          aria-controls="#navNavigation" id="navToggler">
-          <svg aria-label="Toggle menu icon">
-            <use href="assets/icons/icons.svg#ic--baseline-menu"></use>
-          </svg>
-        </button>
       </div>
       <div class="nav-navigation" id="navNavigation">
         <div class="nav-list" id="navList">
@@ -37,9 +31,15 @@
         </div>
       </div>
       <div class="nav-utils">
-        <button class="navbar-darkmode-toggle">
-          <svg>
+        <button type="button" class="navbar-darkmode-toggle" id="navThemeToggler" aria-label="Toggle dark/light theme">
+          <svg aria-hidden="true">
             <use href="assets/icons/icons.svg#mdi--white-balance-sunny"> </use>
+          </svg>
+        </button>
+        <button type="button" class="nav-toggle" aria-expanded="false" aria-label="Toggle navigation"
+          aria-controls="#navNavigation" id="navToggler">
+          <svg aria-label="Toggle menu icon">
+            <use href="assets/icons/icons.svg#ic--baseline-menu"></use>
           </svg>
         </button>
       </div>
